# Calc3d_by_Risen

./: .gitignore  Add_printer.ui  Calc3D.py  Calc3D.spec  Calc3d.ui  Del_preset.ui  Edit_presset.ui  LICENSE  README.md  Settings.ui  Updates.ui  about.ui  app.manifest  app.rc  app_icon.rc  calc3d  calc3dui.py  calculating.c  calculating.h  calculating.py  connection.py  db.py  del-preset.py  edit-preset.py  formula.py  formula.ui  lang_list.py  lists.py  main.c  requirements.txt  settings.py  setts.json  setts.py  text_ru.py  texts.py  themes_list.py  update.py  updates.py
.gitea/workflows/: build.yml  release.yml
C_library/: calculating.c  calculating.h  main.c
UI/: Add_printer.ui  Calc3d.ui  Del_preset.ui  Settings.ui  Updates.ui  preset_settings.ui
locale/en_US/LC_MESSAGES/: locale.mo
locale/ru_RU/LC_MESSAGES/: locale.mo
src/: CMakeLists.txt  Makefile  app.rc  main.cpp
src/C_library/: calculating.c  main.c
src/controller/: controller.h
src/logic/: calculator.cpp  calculator.h  facade.cpp  facade.h  plastic_db.h  printer_db.cpp  printer_db.h  setting_preset.cpp  setting_preset.h
src/model/: facade.h
src/storage/: plastic_db.cpp  plastic_db.h  printer_db.cpp  printer_db.h  setting_preset.cpp  setting_preset.h
src/test/reference/: calc  calculating.c  calculating.h
src/view/: about_dialog.cpp  about_dialog.h  add_plastic.cpp  add_plastic.h  add_preset.cpp  add_preset.h  add_printer.cpp  add_printer.h  delete_list.cpp  delete_list.h  delete_plastic.cpp  delete_plastic.h  delete_preset.cpp  delete_preset.h  delete_printer.cpp  delete_printer.h  edit_preset.cpp  edit_preset.h  formula_dialog.cpp  formula_dialog.h  main_window.cpp  main_window.h  printer_settings.cpp  printer_settings.h  resources.qrc  update_dialog.cpp  update_dialog.h
src/view/ui/: about.ui  add_plastic.ui  add_preset.ui  add_printer.ui  del_list.ui  del_plastic.ui  del_preset.ui  del_printer.ui  edit_preset.ui  formula.ui  main_window.ui  printer_settings.ui  settings.ui  settings_preset.ui  updates.ui
